# compress-python

./:  pyproject.toml  README.md  pyproject.toml  requirements.txt  setup.py  tox.ini
.github/workflows/: daily-check.yml  lint.yml  python-package.yml  python-publish.yml
compress/: compress.py  constants.py
compress/tests/: test_connectio.py  test_connection.py
docs/: Makefile
docs/source/: index.rst
src/compress/: __init__.py  compress.py  constants.py
src/compress/tests/: test_connection.py
