[tool.poetry]
name = "compress-python"
version = "0.1.0"
description = "The Compress python library provides access to the Compress API for encoding videos, restreamers"
authors = ["allan <allan.nava@hiway.media>"]
license = "MIT"
keywords = [ "compress", ]
readme = "README.md"

classifiers=[
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Development Status :: 3 - Alpha",
    "Operating System :: MacOS",
    "Operating System :: Unix",
    "Operating System :: Microsoft :: Windows",
    "Topic :: Utilities",
]
packages = [
    { include = "compress", from = "src/" },
    { include = "compress/**/*.py", from = "src/" },
]
include = ["LICENSE", "CHANGELOG.md", "CONTRIBUTING.md"]

[tool.poetry.dependencies]
python = "^3.10"
requests = ">=2.20.0"
tox = ">=4.0.0"
pytest = ">=7.1.2"
pytest-cov = ">=3.0.0"
wheel = ">=0.38.4"
pre-commit = ">=2.19.0"
isort = ">=5.10.1"
black = ">=22.3.0"
flake8 = ">=3.5.0"
flake8-docstrings = ">=1.6.0"
commitizen = ">=2.28.0"
cryptography = ">=37.0.4"
codespell = ">=2.1.0"
darglint = ">=1.8.1"
twine = ">=4.0.2"
freezegun = ">=1.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
